# animeapi

./: Cargo.toml
src/: lib.rs
