[package]
name = "animeapi"
version = "0.1.46"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
hyper = { version = "0.14", features = ["full"] }

tokio = { version = "1.28.2", features = ["full"] }
thirtyfour = "0.31.0"
hyper-tls = "0.5.0"
